# mini-rust-api

./: .dockerignore  .env  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: rust.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250203_000001_create_roles_table.rs  m20250203_000002_create_user_roles_table.rs  m20250612_103623_create_users.rs  main.rs
src/: bootstrap.rs  errors.rs  lib.rs  main.rs  middleware.rs  pagination.rs  response.rs
src/app/: caller_context.rs  errors.rs  mod.rs
src/app/auth/: login_use_case.rs  mod.rs  register_use_case.rs
src/app/ports/: token_service.rs
src/app/user/: create_user_use_case.rs  get_user_use_case.rs  list_users_use_case.rs  mod.rs  update_user_use_case.rs  user_response.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  service.rs  types.rs
src/config/: config.rs  database.rs  mod.rs
src/db/: connection.rs
src/docs/: mod.rs
src/domain/shared/: user_id.rs
src/domain/user/: email.rs  entity.rs  mod.rs  password.rs  repository.rs  role.rs  user_profile.rs
src/entity/: users.rs
src/extractors/: mod.rs  validate_json.rs  validate_pagination.rs
src/features/user/: email.rs  entity.rs  errors.rs  repository.rs  user_profile.rs
src/infra/: mod.rs
src/infra/auth/: jwt_token_service.rs  mod.rs
src/infra/config/: app_config.rs  database.rs  mod.rs
src/infra/persistence/: mod.rs  sea_orm_user_repository.rs
src/infra/persistence/entities/: mod.rs  prelude.rs  roles.rs  user_roles.rs  users.rs
src/middleware/: cors.rs  tracing.rs
src/models/: user.rs
src/presentation/: errors.rs  mod.rs  state.rs
src/presentation/api/: auth.rs  health.rs  mod.rs  users.rs
src/presentation/extractors/: mod.rs  validated_json.rs  validated_pagination.rs
src/presentation/middleware/: auth.rs  cors.rs  mod.rs
src/presentation/openapi/: mod.rs
src/presentation/responses/: api_response.rs  mod.rs  pagination.rs
src/routes/: health.rs  users.rs
src/validators/: user.rs
tests/: user_integration_test.rs
