[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"