[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }